Updated content and assets

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 
     <!-- ====== Back To Top End ===== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script>
+    <!-- <script>
       const urlParams = new URLSearchParams(window.location.search);
       const name = urlParams.get("name");
       const email = urlParams.get("email");
@@ -405,7 +405,7 @@
 
         doc.save("Your_Ticket.pdf");
       };
-    </script>
+    </script> -->
 
     <script defer src="bundle.js"></script>
   </body>
