--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                       href="www.instagram.com"
                       class="c tc wf xf ie hover:bg-orange-500 ld rg ml il tl"
                     >
-               <img src="images/ins.png" alt="" class="">
+                      <img src="images/ins.png" alt="" class="" />
                     </a>
                   </li>
                 </ul>
@@ -290,16 +290,54 @@
                     />
                   </div>
                 </div>
+                <div class="w-full justify-center flex flex-row mb-6">
+                  <p class="4xl font-bold">Payment Section</p>
+                </div>
+                
+                <p class="text-xs text-gray-400 mt-1 mb-6">
+                Make use of the account number below to pay for your ticket, and the upload the Receipt
+                </p>
+                <p class="text-xs text-gray-500  mt-1 mb-6">
+                 Account Name: Shining voice global link <br />
+                 Bank Name: Taj bank <br />
+                 Account Number: 0005286073
+                </p>
+                <div class="mb-4">
+                  <label
+                    class="block text-gray-300 text-sm font-bold mb-2"
+                    for="payment-account-number"
+                    >Your Account Number (Used for Payment)</label
+                  >
+                  <input
+                    type="text"
+                    name="payment-account-number"
+                    id="payment-account-number"
+                    placeholder="e.g., 0123456789"
+                    class="w-full px-4 py-3 rounded-md border border-gray-300 bg-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+                  />
+                  <p class="text-xs text-gray-400 mt-1">
+                    Please enter the account number from which you made the
+                    payment.
+                  </p>
+                </div>
 
-                <div class="fb">
-                  <label class="rc ac" for="message">Message</label>
-                  <textarea
-                    placeholder="Message"
-                    rows="4"
-                    name="message"
-                    id="message"
-                    class="vd ph sg zk xm _g ch pm hm dm dn em pl/50 ci"
-                  ></textarea>
+                <div class="mb-6">
+                  <label
+                    class="block text-gray-300 text-sm font-bold mb-2"
+                    for="receipt-upload"
+                    >Upload Payment Receipt</label
+                  >
+                  <input
+                    type="file"
+                    name="receipt-upload"
+                    id="receipt-upload"
+                    accept="image/png, image/jpeg, image/jpg, application/pdf"
+                    class="block w-full text-sm text-gray-900 dark:text-gray-100 file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100 dark:file:bg-blue-800 dark:file:text-blue-100 dark:hover:file:bg-blue-700"
+                  />
+                  <p class="text-xs text-gray-500 dark:text-gray-400 mt-1">
+                    Accepted formats: JPG, PNG, JPEG, PDF. Max file size: 5MB
+                    (example).
+                  </p>
                 </div>
 
                 <div class="tc xf">
@@ -308,7 +346,7 @@
                     onclick="payWithPaystack()"
                     class="vc rg lk gh hover:bg-gray-900 bg-orange-500 ml il hi gi _l"
                   >
-                    Pay To Register ₦5,000
+                    Proceed
                   </button>
                 </div>
               </form>
